fix: getFirst를 get 메소드로 변경(#41)